{
  "version": 4,
  "terraform_version": "1.11.3",
  "serial": 738,
  "lineage": "72d7e31b-8ddf-0c6c-1f81-c58fb1f70b8f",
  "resources": [
    {
      "module": "module.airflow_server",
      "mode": "managed",
      "type": "aws_eip",
      "name": "airflow_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04a9400c2ad65f5f8",
            "arn": "arn:aws:ec2:us-east-1:482227257362:elastic-ip/eipalloc-04a9400c2ad65f5f8",
            "association_id": "eipassoc-0222186e316ce6610",
            "domain": "vpc",
            "id": "eipalloc-04a9400c2ad65f5f8",
            "instance": "i-0d6b6fc157f85bce8",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0a3f44f50abf71b85",
            "private_dns": "ip-172-31-71-100.ec2.internal",
            "private_ip": "172.31.71.100",
            "public_dns": "ec2-44-195-50-213.compute-1.amazonaws.com",
            "public_ip": "44.195.50.213",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "house-price-airflow-eip"
            },
            "tags_all": {
              "Name": "house-price-airflow-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.airflow_server",
      "mode": "managed",
      "type": "aws_instance",
      "name": "airflow_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fc5d935ebf8bc3bc",
            "arn": "arn:aws:ec2:us-east-1:482227257362:instance/i-0d6b6fc157f85bce8",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1f",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "house-price-airflow-profile",
            "id": "i-0d6b6fc157f85bce8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a3f44f50abf71b85",
            "private_dns": "ip-172-31-71-100.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.71.100",
            "public_dns": "ec2-44-195-50-213.compute-1.amazonaws.com",
            "public_ip": "44.195.50.213",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0836da160a42d4a9c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "house-price-airflow-sg20251119002806319900000001"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00d543840efec8c87",
            "tags": {
              "Name": "house-price-airflow-server"
            },
            "tags_all": {
              "Name": "house-price-airflow-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06499afc15d4c59c1"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "dependencies": [
            "module.airflow_server.aws_iam_instance_profile.airflow_profile",
            "module.airflow_server.aws_iam_role.airflow_role",
            "module.airflow_server.aws_security_group.airflow_sg",
            "module.rds.aws_db_instance.airflow_db",
            "module.rds.aws_db_subnet_group.airflow_db_subnet_group",
            "module.rds.aws_security_group.airflow_db_sg",
            "module.rds.data.aws_subnets.default",
            "module.rds.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.airflow_server",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "airflow_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:482227257362:security-group/sg-06499afc15d4c59c1",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06499afc15d4c59c1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "house-price-airflow-sg20251119002806319900000001",
            "name_prefix": "house-price-airflow-sg",
            "owner_id": "482227257362",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ec06d2e45d4c6de8"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "data",
      "type": "aws_vpc",
      "name": "existing",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:482227257362:vpc/vpc-0ec06d2e45d4c6de8",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0239f84360d217e8d",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-0223893eb575b76f3",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ec06d2e45d4c6de8",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0c458bb92ee07757a",
            "owner_id": "482227257362"
          }
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "eks_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "eks_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "aap_analytica",
      "provider": "module.eks.provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "aap-analytica",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "purpose": "jupyterhub-runtime"
                },
                "name": "aap-analytica",
                "resource_version": "1282",
                "uid": "9b41da92-fa0e-4981-b3c3-507661579c78"
              }
            ],
            "wait_for_default_service_account": false
          },
          "dependencies": [
            "module.eks.aws_eks_cluster.cluster",
            "module.eks.aws_eks_node_group.node_group",
            "module.eks.aws_iam_role.eks_cluster_role",
            "module.eks.aws_iam_role.node_group_role",
            "module.eks.aws_iam_role_policy_attachment.eks_cluster_policy",
            "module.eks.aws_iam_role_policy_attachment.node_group_cni_policy",
            "module.eks.aws_iam_role_policy_attachment.node_group_policy",
            "module.eks.aws_iam_role_policy_attachment.node_group_registry_policy",
            "module.eks.aws_subnet.private",
            "module.eks.aws_subnet.public",
            "module.eks.aws_vpc.eks_vpc",
            "module.eks.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "aap_base",
      "provider": "module.eks.provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "aap-base",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "purpose": "platform-controllers"
                },
                "name": "aap-base",
                "resource_version": "1281",
                "uid": "74fc5983-3c13-4448-9f7e-9fb4c02f0e3a"
              }
            ],
            "wait_for_default_service_account": false
          },
          "dependencies": [
            "module.eks.aws_eks_cluster.cluster",
            "module.eks.aws_eks_node_group.node_group",
            "module.eks.aws_iam_role.eks_cluster_role",
            "module.eks.aws_iam_role.node_group_role",
            "module.eks.aws_iam_role_policy_attachment.eks_cluster_policy",
            "module.eks.aws_iam_role_policy_attachment.node_group_cni_policy",
            "module.eks.aws_iam_role_policy_attachment.node_group_policy",
            "module.eks.aws_iam_role_policy_attachment.node_group_registry_policy",
            "module.eks.aws_subnet.private",
            "module.eks.aws_subnet.public",
            "module.eks.aws_vpc.eks_vpc",
            "module.eks.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.mlflow_server",
      "mode": "managed",
      "type": "aws_eip",
      "name": "mlflow_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0489d136fcad91919",
            "arn": "arn:aws:ec2:us-east-1:482227257362:elastic-ip/eipalloc-0489d136fcad91919",
            "association_id": "eipassoc-06da2be7b61100d71",
            "domain": "vpc",
            "id": "eipalloc-0489d136fcad91919",
            "instance": "i-0f896e8b112409b9e",
            "network_border_group": "us-east-1",
            "network_interface": "eni-073fd04181ca0bec5",
            "private_dns": "ip-172-31-68-112.ec2.internal",
            "private_ip": "172.31.68.112",
            "public_dns": "ec2-23-21-206-232.compute-1.amazonaws.com",
            "public_ip": "23.21.206.232",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "house-price-mlflow-eip"
            },
            "tags_all": {
              "Name": "house-price-mlflow-eip"
            },
            "vpc": true
          },
          "dependencies": [
            "module.mlflow_server.aws_iam_instance_profile.mlflow_profile",
            "module.mlflow_server.aws_iam_role.mlflow_role",
            "module.mlflow_server.aws_instance.mlflow_server",
            "module.mlflow_server.aws_security_group.mlflow_sg",
            "module.s3.aws_s3_bucket.mlops_bucket",
            "module.s3.random_string.bucket_suffix"
          ]
        }
      ]
    },
    {
      "module": "module.mlflow_server",
      "mode": "managed",
      "type": "aws_instance",
      "name": "mlflow_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fc5d935ebf8bc3bc",
            "arn": "arn:aws:ec2:us-east-1:482227257362:instance/i-0f896e8b112409b9e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1f",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "house-price-mlflow-profile",
            "id": "i-0f896e8b112409b9e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-073fd04181ca0bec5",
            "private_dns": "ip-172-31-68-112.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.68.112",
            "public_dns": "ec2-23-21-206-232.compute-1.amazonaws.com",
            "public_ip": "23.21.206.232",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0575c69c44d6b7556",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "house-price-mlflow-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00d543840efec8c87",
            "tags": {
              "Name": "house-price-mlflow-server"
            },
            "tags_all": {
              "Name": "house-price-mlflow-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e54ff286cddf3f6f"
            ]
          },
          "dependencies": [
            "module.mlflow_server.aws_iam_instance_profile.mlflow_profile",
            "module.mlflow_server.aws_iam_role.mlflow_role",
            "module.mlflow_server.aws_security_group.mlflow_sg",
            "module.s3.aws_s3_bucket.mlops_bucket",
            "module.s3.random_string.bucket_suffix"
          ]
        }
      ]
    },
    {
      "module": "module.mlflow_server",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mlflow_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:482227257362:security-group/sg-0e54ff286cddf3f6f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e54ff286cddf3f6f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              }
            ],
            "name": "house-price-mlflow-sg",
            "name_prefix": "",
            "owner_id": "482227257362",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ec06d2e45d4c6de8"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:482227257362:vpc/vpc-0ec06d2e45d4c6de8",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0239f84360d217e8d",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-0223893eb575b76f3",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ec06d2e45d4c6de8",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0c458bb92ee07757a",
            "owner_id": "482227257362"
          }
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "airflow_db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:482227257362:security-group/sg-08a137c599c426761",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08a137c599c426761",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.31.0.0/16"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "house-price-airflow-db-20251121003029693700000001",
            "name_prefix": "house-price-airflow-db-",
            "owner_id": "482227257362",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "house-price-airflow-db-sg"
            },
            "tags_all": {
              "Name": "house-price-airflow-db-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ec06d2e45d4c6de8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.rds.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.sagemaker",
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:482227257362:vpc/vpc-0ec06d2e45d4c6de8",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0239f84360d217e8d",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-0223893eb575b76f3",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ec06d2e45d4c6de8",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0c458bb92ee07757a",
            "owner_id": "482227257362"
          }
        }
      ]
    }
  ]
}